# app-filmash8

./: CMakeLists.txt  LICENSE  README.md
gtests/: CMakeLists.txt  TestBasic.cpp  TestPnLs.cpp  TestStringHasher.cpp  main.cpp
include/: BarPeriod.h  BasisOfStrategy.h  CIndicatorES.h  Comparers.h  DelphisRound.h  FileManipulator.h  Forecasting.h  Indicators.h  LiveSAR.h  PnlAction.h  PowellsMethod.h  Prices.h  RollRange.h  RollRangeBar.h  RollSMA.h  RubberBuffer.h  StringHasher.h  VolatilityBarBuffer.h  VolatilityBuffer.h
includeR/: RExportFile.h
src/: BarPeriod.cpp  BasisOfStrategy.cpp  CIndicatorES.cpp  Forecasting.cpp  Indicators.cpp  PnlAction.cpp  PowellsMethod.cpp  StringHasher.cpp
srcR/: RExportFile.cpp
